k8s/authentication-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentication-service-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentication-service
  template:
    metadata:
      labels:
        app: authentication-service
    spec:
      containers:
        - name: authentication-service
          image: <docker_account>/microservices-example-authentication-service:latest
---
apiVersion: v1
kind: Service
metadata:
  name: authentication-service-svc
spec:
  selector:
    app: authentication-service
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
