k8s/email-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email-service-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: email-service
  template:
    metadata:
      labels:
        app: email-service
    spec:
      containers:
        - name: email-service
          image: thesleepydev/microservices-example-email-service:latest
---
apiVersion: v1
kind: Service
metadata:
  name: email-service-svc
spec:
  selector:
    app: email-service
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
