k8s/mailhog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailhog-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailhog
  template:
    metadata:
      labels:
        app: mailhog
    spec:
      containers:
        - name: mailhog
          image: mailhog/mailhog
---
apiVersion: v1
kind: Service
metadata:
  name: mailhog-svc
spec:
  selector:
    app: mailhog
  ports:
    - protocol: TCP
      name: smtp
      port: 1025
      targetPort: 1025
    - protocol: TCP
      name: dashboard
      port: 8025
      targetPort: 8025
  type: LoadBalancer
