k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-svc
  annotations:
    nginx.ingress.kubernetes.io/from-to-www-redirect: 'true'
spec:
  ingressClassName: nginx
  rules:
    - host: 'api.microservices-example.dev'
      http:
        paths:
          - path: '/'
            pathType: Prefix
            backend:
              service:
                name: api-gateway-svc
                port:
                  number: 3000
